--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -17,8 +17,8 @@ collections:
     create: true
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Author", name: "author", widget: "string", default: "Admin"}
+      - {label: "Publish Date", name: "date", widget: "date",default: '', format: "DD-MM-YYYY"}
+      # - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
 
