--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -17,6 +17,7 @@ collections:
     create: true
     fields:
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date",default: '', format: "DD-MM-YYYY"}
       # - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
