--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -20,6 +20,6 @@ collections:
       - {label: "Description", name: "description", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date",default: '', format: "DD-MM-YYYY"}
       # - {label: "Author", name: "author", widget: "string", default: "Admin"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Featured Image", name: "thumbnail", default: '', widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
 
