--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,7 +18,7 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "date",default: '', format: "DD-MM-YYYY"}
+      - {label: "Publish Date", name: "date", widget: "date",default: '', format: "MM-DD-YYYY"}
       # - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Featured Image", name: "thumbnail", default: '', widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
