--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -19,6 +19,16 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date",default: '', format: "MM-DD-YYYY"}
+      - {
+      label: "Start time",
+  name: "start",
+  widget: "datetime",
+  default: "",
+  date_format: "DD.MM.YYYY",
+  time_format: "HH:mm",
+  format: "LLL",
+  picker_utc: true
+      }
       # - {label: "Author", name: "author", widget: "string", default: "Admin"}
       - {label: "Featured Image", name: "thumbnail", default: '', widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
