--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -25,21 +25,28 @@ collections:
                 allow_add: true,
                 default: [''],
             }
+          # - {
+          #       label: 'Publish Date',
+          #       name: 'date',
+          #       widget: 'date',
+          #       format: 'MM-DD-YYYY',
+          #   }
           - {
-                label: 'Publish Date',
-                name: 'date',
-                widget: 'date',
-                format: 'MM-DD-YYYY',
+            label: 'Publish Date'
+            name: 'date'
+            widget: 'datetime'
+            default: ''
+            date_format: 'MM-DD-YYYY' # e.g. 24.12.2021
+            time_format: 'HH:mm' # e.g. 21:07
+            format: 'LLL'
+            picker_utc: false
             }
-          # - label: 'Start time'
-          #   name: 'start'
-          #   widget: 'datetime'
-          #   default: ''
-          #   date_format: 'DD.MM.YYYY' # e.g. 24.12.2021
-          #   time_format: 'HH:mm' # e.g. 21:07
-          #   format: 'LLL'
-          #   picker_utc: false
-          # - {label: "Author", name: "author", widget: "string", default: "Admin"}
+          - {
+                label: 'Author',
+                name: 'author',
+                widget: 'string',
+                default: 'Admin',
+            }
           - {
                 label: 'Featured Image',
                 name: 'thumbnail',
