--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^11.1.0",
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
     "marked": "^2.0.5",
