publish date clearn up and sort by pub date

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -27,7 +27,7 @@ collections:
             }
           - {
                 label: 'Date published',
-                name: 'published-date',
+                name: 'publishedDate',
                 widget: 'datetime',
                 default: '',
                 date_format: 'MM-DD-YYYY',
