--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gray-matter": "^4.0.3",
     "marked": "^2.0.5",
     "moment": "^2.29.1",
-    "next": "10.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
