--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "@babel/core": "^7.16.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^11.1.0",
     "date-fns": "^2.22.1",
