--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,6 @@
 backend:
-    name: [github | gitlab]
-    repo: /kimutai-codes/blog # Path to your Github/Gitlab repository
-    # name: git-gateway
+    name: git-gateway
     branch: main # Branch to update (optional; defaults to master)
-    base_url: https://netlify-cms.adrianub.vercel.app
 
 media_folder: public/images/uploads #where uploaded images are uploaded
 public_folder: images/uploads #where we serve uploaded images from
