--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "tina-dev": "yarn tinacms server:start -c \"next dev\"",
+    "tina-build": "yarn tinacms server:start -c \"next build\"",
+    "tina-start": "yarn tinacms server:start -c \"next start\""
   },
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^11.1.0",
+    "@tinacms/cli": "^0.57.2",
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
     "marked": "^2.0.5",
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3",
+    "tinacms": "^0.59.0"
   }
 }
