--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -50,5 +50,9 @@ collections:
                 name: 'thumbnail',
                 default: ' ',
                 widget: 'image',
+                fields:
+                  - {name: src, label: Image, widget: image}
+                  - {name: alt, label: Alt text, widget: string}
+                  - {name: title, label: Title, widget: string}
             }
           - { label: 'Body', name: 'body', widget: 'markdown' }
